--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -775,6 +775,7 @@ code {
 
 .profileScreenScrollContainer {
   height: 90%;
+  width: 90%;
   margin: 0 auto;
   overflow-y: auto;
   overflow-x: hidden;
@@ -811,8 +812,9 @@ code {
   background-color: var(--background);
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   padding: 2%;
+  height: 100%;
 }
 
 .profileRightScrollContainer {
@@ -1403,6 +1405,7 @@ code {
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  height: 100%;
 }
 
 .adminScreenTop {
@@ -1426,7 +1429,7 @@ code {
 
 .adminScreenScrollContainer {
   background-color: var(--background);
-  height: 90%;
+  height: 80%;
   margin-top: 1%;
   margin-bottom: -3%;
   overflow-y: auto;
