--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -639,11 +639,11 @@ code {
 
 /* PROFILE SCREEN */
 .profileScreen {
-  position: relative;
   padding: 0 6% 0 6%;
   display: flex;
   flex-direction: row;
   flex: 1 1 auto;
+  overflow-y: auto;
 }
 
 .profileScreenOptions {
@@ -815,12 +815,13 @@ code {
   align-items: flex-start;
   padding: 2%;
   height: 100%;
+  overflow-y: auto;
 }
 
 .profileRightScrollContainer {
   overflow-y: auto;
   overflow-x: hidden;
-  height: 90%;
+  height: 95%;
   width: 60%;
   margin-left: 2%;
 }
@@ -949,10 +950,10 @@ code {
   width: 100%;
   height: 45%;
   user-select: none;
-  user-select: none;
   background-color: var(--secondary);
   filter: drop-shadow(0px 0px 4px #333333);
-  overflow: hidden;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .playlistScreenAddSongBox {
@@ -1570,10 +1571,11 @@ code {
   flex-direction: column;
   justify-content: space-between;
   user-select: none;
-  user-select: none;
+  height: 60%;
   background-color: var(--secondary);
   filter: drop-shadow(0px 0px 4px #333333);
   overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .viewPlaylistPlayAllButton {
